Calculator Key with styles, unit tests and keypad wrapper

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,14 +19,9 @@
 		"isolatedModules": true,
 		"noEmit": true,
 		"jsx": "react-jsx",
-		"baseUrl": "./",
-		"paths": {
-			"@/*": [
-				"src/*"
-			]
-		},
 	},
 	"include": [
-		"src"
-	]
+		"./src/**/*",
+	],
+	"extends": "./tsconfig.paths.json"
 }
