--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
 	"version": "1.0.0",
 	"private": true,
 	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
+		"start": "react-app-rewired start",
+		"build": "react-app-rewired build",
+		"test": "react-app-rewired test",
 		"eject": "react-scripts eject",
 		"lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
 		"format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\""
@@ -38,7 +38,7 @@
 		"@types/react-dom": "^18.0.3",
 		"react": "^18.1.0",
 		"react-dom": "^18.1.0",
-		"react-scripts": "5.0.1",
+		"react-scripts": "^5.0.1",
 		"typescript": "^4.6.4",
 		"web-vitals": "^2.1.4"
 	},
@@ -55,6 +55,8 @@
 		"postcss-nested": "^5.0.6",
 		"postcss-preset-env": "^7.5.0",
 		"prettier": "^2.6.2",
+		"react-app-rewire-alias": "^1.1.7",
+		"react-app-rewired": "^2.2.1",
 		"react-test-renderer": "^18.1.0",
 		"sass": "^1.51.0",
 		"stylelint": "^14.8.2",
