--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
 			"react-app/jest"
 		]
 	},
+	"jest": {
+		"moduleNameMapper": {
+			"@/(.*)": "<rootDir>/src/$1"
+		}
+	},
 	"browserslist": {
 		"production": [
 			">0.2%",
